Main.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.18.10 from Main.y
-----------------------------------------------------------------------------

state 93 contains 2 shift/reduce conflicts.
state 108 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseProgram -> Program                     (0)
	Program -> PACKAGE IDENT END ImportList GVar Funz   (1)
	ImportList ->                                      (2)
	ImportList -> IMPORT STRINGA END ImportList        (3)
	ImportList -> IMPORT OPENR END Imp CLOSER END      (4)
	Imp -> STRINGA END Imp2                            (5)
	Imp2 ->                                            (6)
	Imp2 -> STRINGA END Imp2                           (7)
	OptEnd ->                                          (8)
	OptEnd -> END OptEnd                               (9)
	GVar ->                                            (10)
	GVar -> VAR IDENT Tipo END GVar                    (11)
	GVar -> VAR IDENT Tipo UGUALE Valori END GVar      (12)
	GVar -> VAR OPENR END VarLine CLOSER END GVar      (13)
	VarLine ->                                         (14)
	VarLine -> IDENT Tipo UGUALE Valori END VarLine    (15)
	VarLine -> IDENT Tipo END VarLine                  (16)
	Valori -> INTERO                                   (17)
	Valori -> FLOAT                                    (18)
	Valori -> BOOLEANO                                 (19)
	Valori -> STRINGA                                  (20)
	Valori -> CHAR                                     (21)
	Tipo ->                                            (22)
	Tipo -> RUNE                                       (23)
	Tipo -> BOOL                                       (24)
	Tipo -> STR                                        (25)
	Tipo -> INT                                        (26)
	Tipo -> AST Tipo                                   (27)
	Tipo -> FLOAT32                                    (28)
	Tipo -> FLOAT64                                    (29)
	Tipo -> OPENQ INTERO CLOSEQ Tipo                   (30)
	Funz ->                                            (31)
	Funz -> FUNC IDENT OPENR ParList CLOSER Tipo Blocco OptEnd Funz   (32)
	ParList ->                                         (33)
	ParList -> ParListNE                               (34)
	ParListNE -> IDENT Tipo Modo                       (35)
	ParListNE -> ParListNE COMMA IDENT Tipo Modo       (36)
	Modo -> VALRES                                     (37)
	Modo -> CNST                                       (38)
	Modo ->                                            (39)
	Modo -> VAL                                        (40)
	Blocco -> OPENG END Lstm OptEnd CLOSEG END         (41)
	BloccoNE -> OPENG END Lstm OptEnd CLOSEG           (42)
	BloccoSw -> OPENG END Lcase CLOSEG END             (43)
	Lstm ->                                            (44)
	Lstm -> Stm Lstm                                   (45)
	Stm -> FOR RE SEMICOL RE SEMICOL RE Blocco         (46)
	Stm -> FOR RE Blocco                               (47)
	Stm -> FOR Blocco                                  (48)
	Stm -> IF RE Blocco                                (49)
	Stm -> IF RE Blocco ELSE Blocco                    (50)
	Stm -> IF RE BloccoNE ELSE Blocco                  (51)
	Stm -> SWITCH IDENT BloccoSw                       (52)
	Stm -> Blocco                                      (53)
	Stm -> TRY Blocco CATCH Blocco                     (54)
	Stm -> RE END                                      (55)
	Stm -> RETURN END                                  (56)
	Stm -> RETURN RE END                               (57)
	Stm -> CONTINUE END                                (58)
	Stm -> BREAK END                                   (59)
	Stm -> VAR IDENT Tipo END                          (60)
	Stm -> VAR IDENT Tipo UGUALE Valori END            (61)
	Stm -> VAR OPENR END VarLine CLOSER END            (62)
	Lcase ->                                           (63)
	Lcase -> CASE Valori COL Lstm OptEnd Lcase         (64)
	Lcase -> DEFAULT COL Lstm OptEnd                   (65)
	RE -> RE PLUS RE                                   (66)
	RE -> RE MINUS RE                                  (67)
	RE -> RE AST RE                                    (68)
	RE -> RE DIV RE                                    (69)
	RE -> RE POW RE                                    (70)
	RE -> RE OPDISEQL RE                               (71)
	RE -> RE OPDISEQLE RE                              (72)
	RE -> RE OPDISEQG RE                               (73)
	RE -> RE OPDISEQGE RE                              (74)
	RE -> RE OPEQ RE                                   (75)
	RE -> RE OPNEQ RE                                  (76)
	RE -> RE OR RE                                     (77)
	RE -> RE AND RE                                    (78)
	RE -> RE XOR RE                                    (79)
	RE -> OPENR RE CLOSER                              (80)
	RE -> MINUS RE                                     (81)
	RE -> NOT RE                                       (82)
	RE -> LE                                           (83)
	RE -> LE UGUALE RE                                 (84)
	RE -> IDENT OPENR ListParAtt CLOSER                (85)
	RE -> DEPUNT LE                                    (86)
	RE -> Valori                                       (87)
	ListParAtt ->                                      (88)
	ListParAtt -> ListParAttNE                         (89)
	ListParAttNE -> RE                                 (90)
	ListParAttNE -> ListParAttNE COMMA RE              (91)
	LE -> IDENT                                        (92)
	LE -> AST RE                                       (93)
	LE -> LE OPENQ RE CLOSEQ                           (94)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	PACKAGE        { (a, Package) }
	IMPORT         { (a, Import) }
	VAR            { (a, DVar) }
	FUNC           { (a, Func) }
	END            { (a, End) }
	OPENR          { (a, OpenR) }
	CLOSER         { (a, CloseR) }
	OPENQ          { (a, OpenQ) }
	CLOSEQ         { (a, CloseQ) }
	OPENG          { (a, OpenG) }
	CLOSEG         { (a, CloseG) }
	COMMA          { (a, Comma) }
	SEMICOL        { (a, Semicol) }
	COL            { (a, Col) }
	TRY            { (a, Try) }
	CATCH          { (a, Catch) }
	RETURN         { (a, Return) }
	UGUALE         { (a, Uguale) }
	IDENT          { (a, Ident $$) }
	BOOLEANO       { (a, Booleano $$) }
	INTERO         { (a, Intero $$) }
	FLOAT          { (a, Reale $$) }
	STRINGA        { (a, Stringa $$) }
	CHAR           { (a, Char $$) }
	RUNE           { (a, TRune) }
	BOOL           { (a, TBool) }
	INT            { (a, TInt) }
	STR            { (a, TStr) }
	AST            { (a, Ast) }
	FLOAT32        { (a, TFloat32) }
	FLOAT64        { (a, TFloat64) }
	VAL            { (a, Val) }
	VALRES         { (a, Valres) }
	CNST           { (a, Cnst) }
	FOR            { (a, For) }
	IF             { (a, If) }
	ELSE           { (a, Else) }
	SWITCH         { (a, Switch) }
	CASE           { (a, Case) }
	DEFAULT        { (a, Default) }
	CONTINUE       { (a, Continue) }
	BREAK          { (a, Break) }
	PLUS           { (a, Plus) }
	MINUS          { (a, Minus) }
	DIV            { (a, Div) }
	POW            { (a, Pow) }
	OPEQ           { (a, OpEq) }
	OPNEQ          { (a, OpNEq) }
	OPDISEQL       { (a, OpDiseqL) }
	OPDISEQLE      { (a, OpDiseqLE) }
	OPDISEQG       { (a, OpDiseqG) }
	OPDISEQGE      { (a, OpDiseqGE) }
	AND            { (a, And) }
	OR             { (a, Or) }
	XOR            { (a, Xor) }
	NOT            { (a, Not) }
	DEPUNT         { (a, DePunt) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseProgram rule  0
	Program         rule  1
	ImportList      rules 2, 3, 4
	Imp             rule  5
	Imp2            rules 6, 7
	OptEnd          rules 8, 9
	GVar            rules 10, 11, 12, 13
	VarLine         rules 14, 15, 16
	Valori          rules 17, 18, 19, 20, 21
	Tipo            rules 22, 23, 24, 25, 26, 27, 28, 29, 30
	Funz            rules 31, 32
	ParList         rules 33, 34
	ParListNE       rules 35, 36
	Modo            rules 37, 38, 39, 40
	Blocco          rule  41
	BloccoNE        rule  42
	BloccoSw        rule  43
	Lstm            rules 44, 45
	Stm             rules 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62
	Lcase           rules 63, 64, 65
	RE              rules 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87
	ListParAtt      rules 88, 89
	ListParAttNE    rules 90, 91
	LE              rules 92, 93, 94

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	PACKAGE        shift, and enter state 2

	Program        goto state 3

State 1


	PACKAGE        shift, and enter state 2


State 2

	Program -> PACKAGE . IDENT END ImportList GVar Funz    (rule 1)

	IDENT          shift, and enter state 4


State 3

	%start_parseProgram -> Program .                    (rule 0)

	%eof           accept


State 4

	Program -> PACKAGE IDENT . END ImportList GVar Funz    (rule 1)

	END            shift, and enter state 5


State 5

	Program -> PACKAGE IDENT END . ImportList GVar Funz    (rule 1)

	IMPORT         shift, and enter state 7
	VAR            reduce using rule 2
	FUNC           reduce using rule 2
	%eof           reduce using rule 2

	ImportList     goto state 6

State 6

	Program -> PACKAGE IDENT END ImportList . GVar Funz    (rule 1)

	VAR            shift, and enter state 11
	FUNC           reduce using rule 10
	%eof           reduce using rule 10

	GVar           goto state 10

State 7

	ImportList -> IMPORT . STRINGA END ImportList       (rule 3)
	ImportList -> IMPORT . OPENR END Imp CLOSER END     (rule 4)

	OPENR          shift, and enter state 8
	STRINGA        shift, and enter state 9


State 8

	ImportList -> IMPORT OPENR . END Imp CLOSER END     (rule 4)

	END            shift, and enter state 17


State 9

	ImportList -> IMPORT STRINGA . END ImportList       (rule 3)

	END            shift, and enter state 16


State 10

	Program -> PACKAGE IDENT END ImportList GVar . Funz    (rule 1)

	FUNC           shift, and enter state 15
	%eof           reduce using rule 31

	Funz           goto state 14

State 11

	GVar -> VAR . IDENT Tipo END GVar                   (rule 11)
	GVar -> VAR . IDENT Tipo UGUALE Valori END GVar     (rule 12)
	GVar -> VAR . OPENR END VarLine CLOSER END GVar     (rule 13)

	OPENR          shift, and enter state 12
	IDENT          shift, and enter state 13


State 12

	GVar -> VAR OPENR . END VarLine CLOSER END GVar     (rule 13)

	END            shift, and enter state 31


State 13

	GVar -> VAR IDENT . Tipo END GVar                   (rule 11)
	GVar -> VAR IDENT . Tipo UGUALE Valori END GVar     (rule 12)

	END            reduce using rule 22
	OPENQ          shift, and enter state 23
	UGUALE         reduce using rule 22
	RUNE           shift, and enter state 24
	BOOL           shift, and enter state 25
	INT            shift, and enter state 26
	STR            shift, and enter state 27
	AST            shift, and enter state 28
	FLOAT32        shift, and enter state 29
	FLOAT64        shift, and enter state 30

	Tipo           goto state 22

State 14

	Program -> PACKAGE IDENT END ImportList GVar Funz .    (rule 1)

	%eof           reduce using rule 1


State 15

	Funz -> FUNC . IDENT OPENR ParList CLOSER Tipo Blocco OptEnd Funz    (rule 32)

	IDENT          shift, and enter state 21


State 16

	ImportList -> IMPORT STRINGA END . ImportList       (rule 3)

	IMPORT         shift, and enter state 7
	VAR            reduce using rule 2
	FUNC           reduce using rule 2
	%eof           reduce using rule 2

	ImportList     goto state 20

State 17

	ImportList -> IMPORT OPENR END . Imp CLOSER END     (rule 4)

	STRINGA        shift, and enter state 19

	Imp            goto state 18

State 18

	ImportList -> IMPORT OPENR END Imp . CLOSER END     (rule 4)

	CLOSER         shift, and enter state 40


State 19

	Imp -> STRINGA . END Imp2                           (rule 5)

	END            shift, and enter state 39


State 20

	ImportList -> IMPORT STRINGA END ImportList .       (rule 3)

	VAR            reduce using rule 3
	FUNC           reduce using rule 3
	%eof           reduce using rule 3


State 21

	Funz -> FUNC IDENT . OPENR ParList CLOSER Tipo Blocco OptEnd Funz    (rule 32)

	OPENR          shift, and enter state 38


State 22

	GVar -> VAR IDENT Tipo . END GVar                   (rule 11)
	GVar -> VAR IDENT Tipo . UGUALE Valori END GVar     (rule 12)

	END            shift, and enter state 36
	UGUALE         shift, and enter state 37


State 23

	Tipo -> OPENQ . INTERO CLOSEQ Tipo                  (rule 30)

	INTERO         shift, and enter state 35


State 24

	Tipo -> RUNE .                                      (rule 23)

	END            reduce using rule 23
	CLOSER         reduce using rule 23
	OPENG          reduce using rule 23
	COMMA          reduce using rule 23
	UGUALE         reduce using rule 23
	VAL            reduce using rule 23
	VALRES         reduce using rule 23
	CNST           reduce using rule 23


State 25

	Tipo -> BOOL .                                      (rule 24)

	END            reduce using rule 24
	CLOSER         reduce using rule 24
	OPENG          reduce using rule 24
	COMMA          reduce using rule 24
	UGUALE         reduce using rule 24
	VAL            reduce using rule 24
	VALRES         reduce using rule 24
	CNST           reduce using rule 24


State 26

	Tipo -> INT .                                       (rule 26)

	END            reduce using rule 26
	CLOSER         reduce using rule 26
	OPENG          reduce using rule 26
	COMMA          reduce using rule 26
	UGUALE         reduce using rule 26
	VAL            reduce using rule 26
	VALRES         reduce using rule 26
	CNST           reduce using rule 26


State 27

	Tipo -> STR .                                       (rule 25)

	END            reduce using rule 25
	CLOSER         reduce using rule 25
	OPENG          reduce using rule 25
	COMMA          reduce using rule 25
	UGUALE         reduce using rule 25
	VAL            reduce using rule 25
	VALRES         reduce using rule 25
	CNST           reduce using rule 25


State 28

	Tipo -> AST . Tipo                                  (rule 27)

	END            reduce using rule 22
	CLOSER         reduce using rule 22
	OPENQ          shift, and enter state 23
	OPENG          reduce using rule 22
	COMMA          reduce using rule 22
	UGUALE         reduce using rule 22
	RUNE           shift, and enter state 24
	BOOL           shift, and enter state 25
	INT            shift, and enter state 26
	STR            shift, and enter state 27
	AST            shift, and enter state 28
	FLOAT32        shift, and enter state 29
	FLOAT64        shift, and enter state 30
	VAL            reduce using rule 22
	VALRES         reduce using rule 22
	CNST           reduce using rule 22

	Tipo           goto state 34

State 29

	Tipo -> FLOAT32 .                                   (rule 28)

	END            reduce using rule 28
	CLOSER         reduce using rule 28
	OPENG          reduce using rule 28
	COMMA          reduce using rule 28
	UGUALE         reduce using rule 28
	VAL            reduce using rule 28
	VALRES         reduce using rule 28
	CNST           reduce using rule 28


State 30

	Tipo -> FLOAT64 .                                   (rule 29)

	END            reduce using rule 29
	CLOSER         reduce using rule 29
	OPENG          reduce using rule 29
	COMMA          reduce using rule 29
	UGUALE         reduce using rule 29
	VAL            reduce using rule 29
	VALRES         reduce using rule 29
	CNST           reduce using rule 29


State 31

	GVar -> VAR OPENR END . VarLine CLOSER END GVar     (rule 13)

	CLOSER         reduce using rule 14
	IDENT          shift, and enter state 33

	VarLine        goto state 32

State 32

	GVar -> VAR OPENR END VarLine . CLOSER END GVar     (rule 13)

	CLOSER         shift, and enter state 56


State 33

	VarLine -> IDENT . Tipo UGUALE Valori END VarLine    (rule 15)
	VarLine -> IDENT . Tipo END VarLine                 (rule 16)

	END            reduce using rule 22
	OPENQ          shift, and enter state 23
	UGUALE         reduce using rule 22
	RUNE           shift, and enter state 24
	BOOL           shift, and enter state 25
	INT            shift, and enter state 26
	STR            shift, and enter state 27
	AST            shift, and enter state 28
	FLOAT32        shift, and enter state 29
	FLOAT64        shift, and enter state 30

	Tipo           goto state 55

State 34

	Tipo -> AST Tipo .                                  (rule 27)

	END            reduce using rule 27
	CLOSER         reduce using rule 27
	OPENG          reduce using rule 27
	COMMA          reduce using rule 27
	UGUALE         reduce using rule 27
	VAL            reduce using rule 27
	VALRES         reduce using rule 27
	CNST           reduce using rule 27


State 35

	Tipo -> OPENQ INTERO . CLOSEQ Tipo                  (rule 30)

	CLOSEQ         shift, and enter state 54


State 36

	GVar -> VAR IDENT Tipo END . GVar                   (rule 11)

	VAR            shift, and enter state 11
	FUNC           reduce using rule 10
	%eof           reduce using rule 10

	GVar           goto state 53

State 37

	GVar -> VAR IDENT Tipo UGUALE . Valori END GVar     (rule 12)

	BOOLEANO       shift, and enter state 48
	INTERO         shift, and enter state 49
	FLOAT          shift, and enter state 50
	STRINGA        shift, and enter state 51
	CHAR           shift, and enter state 52

	Valori         goto state 47

State 38

	Funz -> FUNC IDENT OPENR . ParList CLOSER Tipo Blocco OptEnd Funz    (rule 32)

	CLOSER         reduce using rule 33
	IDENT          shift, and enter state 46

	ParList        goto state 44
	ParListNE      goto state 45

State 39

	Imp -> STRINGA END . Imp2                           (rule 5)

	CLOSER         reduce using rule 6
	STRINGA        shift, and enter state 43

	Imp2           goto state 42

State 40

	ImportList -> IMPORT OPENR END Imp CLOSER . END     (rule 4)

	END            shift, and enter state 41


State 41

	ImportList -> IMPORT OPENR END Imp CLOSER END .     (rule 4)

	VAR            reduce using rule 4
	FUNC           reduce using rule 4
	%eof           reduce using rule 4


State 42

	Imp -> STRINGA END Imp2 .                           (rule 5)

	CLOSER         reduce using rule 5


State 43

	Imp2 -> STRINGA . END Imp2                          (rule 7)

	END            shift, and enter state 65


State 44

	Funz -> FUNC IDENT OPENR ParList . CLOSER Tipo Blocco OptEnd Funz    (rule 32)

	CLOSER         shift, and enter state 64


State 45

	ParList -> ParListNE .                              (rule 34)
	ParListNE -> ParListNE . COMMA IDENT Tipo Modo      (rule 36)

	CLOSER         reduce using rule 34
	COMMA          shift, and enter state 63


State 46

	ParListNE -> IDENT . Tipo Modo                      (rule 35)

	CLOSER         reduce using rule 22
	OPENQ          shift, and enter state 23
	COMMA          reduce using rule 22
	RUNE           shift, and enter state 24
	BOOL           shift, and enter state 25
	INT            shift, and enter state 26
	STR            shift, and enter state 27
	AST            shift, and enter state 28
	FLOAT32        shift, and enter state 29
	FLOAT64        shift, and enter state 30
	VAL            reduce using rule 22
	VALRES         reduce using rule 22
	CNST           reduce using rule 22

	Tipo           goto state 62

State 47

	GVar -> VAR IDENT Tipo UGUALE Valori . END GVar     (rule 12)

	END            shift, and enter state 61


State 48

	Valori -> BOOLEANO .                                (rule 19)

	END            reduce using rule 19
	CLOSER         reduce using rule 19
	OPENQ          reduce using rule 19
	CLOSEQ         reduce using rule 19
	OPENG          reduce using rule 19
	COMMA          reduce using rule 19
	SEMICOL        reduce using rule 19
	COL            reduce using rule 19
	UGUALE         reduce using rule 19
	AST            reduce using rule 19
	PLUS           reduce using rule 19
	MINUS          reduce using rule 19
	DIV            reduce using rule 19
	POW            reduce using rule 19
	OPEQ           reduce using rule 19
	OPNEQ          reduce using rule 19
	OPDISEQL       reduce using rule 19
	OPDISEQLE      reduce using rule 19
	OPDISEQG       reduce using rule 19
	OPDISEQGE      reduce using rule 19
	AND            reduce using rule 19
	OR             reduce using rule 19
	XOR            reduce using rule 19


State 49

	Valori -> INTERO .                                  (rule 17)

	END            reduce using rule 17
	CLOSER         reduce using rule 17
	OPENQ          reduce using rule 17
	CLOSEQ         reduce using rule 17
	OPENG          reduce using rule 17
	COMMA          reduce using rule 17
	SEMICOL        reduce using rule 17
	COL            reduce using rule 17
	UGUALE         reduce using rule 17
	AST            reduce using rule 17
	PLUS           reduce using rule 17
	MINUS          reduce using rule 17
	DIV            reduce using rule 17
	POW            reduce using rule 17
	OPEQ           reduce using rule 17
	OPNEQ          reduce using rule 17
	OPDISEQL       reduce using rule 17
	OPDISEQLE      reduce using rule 17
	OPDISEQG       reduce using rule 17
	OPDISEQGE      reduce using rule 17
	AND            reduce using rule 17
	OR             reduce using rule 17
	XOR            reduce using rule 17


State 50

	Valori -> FLOAT .                                   (rule 18)

	END            reduce using rule 18
	CLOSER         reduce using rule 18
	OPENQ          reduce using rule 18
	CLOSEQ         reduce using rule 18
	OPENG          reduce using rule 18
	COMMA          reduce using rule 18
	SEMICOL        reduce using rule 18
	COL            reduce using rule 18
	UGUALE         reduce using rule 18
	AST            reduce using rule 18
	PLUS           reduce using rule 18
	MINUS          reduce using rule 18
	DIV            reduce using rule 18
	POW            reduce using rule 18
	OPEQ           reduce using rule 18
	OPNEQ          reduce using rule 18
	OPDISEQL       reduce using rule 18
	OPDISEQLE      reduce using rule 18
	OPDISEQG       reduce using rule 18
	OPDISEQGE      reduce using rule 18
	AND            reduce using rule 18
	OR             reduce using rule 18
	XOR            reduce using rule 18


State 51

	Valori -> STRINGA .                                 (rule 20)
